@@ -59,6 +59,9 @@ HEAD only (unreleased)
 
   Others
 
+    - Some simplifications to the slurp_release release helper script and
+      updates to the RELEASE.txt release instructions.
+
     - The CMF now depends on Zope 2.8 / Five.
 
     - Non-release packages moved out of the /CMF/ repository package:
